# baresip-studio

app/src/main/cpp/: CMakeLists.txt  baresip.c
